--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/hardhat-upgrades": "^1.14.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "hardhat": "^2.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^15.0.0"
   }
 }
